k8s/istio/virtualservice-promises.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: promises-service
spec:
  hosts:
    - promises-service
  http:
    - route:
        - destination:
            host: promises-service
            subset: v1
          weight: 80
        - destination:
            host: promises-service
            subset: v2
          weight: 20
