k8s/istio/virtualservice-sources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sources-service
spec:
  hosts:
    - sources-service
  http:
    - fault:
        delay:
          percentage:
            value: 10
          fixedDelay: 5s
        abort:
          percentage:
            value: 5
          httpStatus: 503
      route:
        - destination:
            host: sources-service
            subset: v1
